src/objects/ints__Yodlee_Transaction_Type_Mapping__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Yodlee Transaction Type Mapping</description>
    <fields>
        <fullName>ints__carPayment__c</fullName>
        <label>carPayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__creditCardPayment__c</fullName>
        <label>creditCardPayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__income__c</fullName>
        <label>income</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__leasePayment__c</fullName>
        <label>leasePayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__loanPayment__c</fullName>
        <label>loanPayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__mortgagePayment__c</fullName>
        <label>mortgagePayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__nsfFee__c</fullName>
        <label>nsfFee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__payroll__c</fullName>
        <label>payroll</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__studentLoanPayment__c</fullName>
        <label>studentLoanPayment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Yodlee Transaction Type Mapping</label>
</CustomObject>